--- a/aime2025_process.ipynb
+++ b/aime2025_process.ipynb
@@ -2,95 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "b0606578-e405-4197-8c2d-72559d2983fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/torch/cuda/__init__.py:61: FutureWarning: The pynvml package is deprecated. Please install nvidia-ml-py instead. If you did not install pynvml directly, please report this to the maintainers of the package that installed pynvml for you.\n",
+      "  import pynvml  # type: ignore[import]\n",
+      "Generating train split: 100%|██████████| 30/30 [00:00<00:00, 4512.43 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import datasets\n",
     "cache_path = '/data/kcl/lpy/hf'\n",
-    "data_path = \"/data/kcl/lpy/data/AIME_2024\"\n",
+    "data_path = \"/data/kcl/lpy/data/AIME_2025\"\n",
     "dataset = datasets.load_dataset(data_path, \"default\", cache_dir=cache_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "e58b3076-f8d2-4604-8c50-332ce6931f7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    test: Dataset({\n",
-       "        features: ['data_source', 'prompt', 'ability', 'reward_model', 'extra_info', '__index_level_0__'],\n",
-       "        num_rows: 960\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "    train_dataset = dataset[\"test\"]\n",
-    "\n",
-    "    # add a row to each data item that represents a unique id\n",
-    "    def make_map_fn(split):\n",
-    "        def process_fn(example, idx):\n",
-    "            orig_extra_info = example.pop(\"extra_info\")\n",
-    "            extra_info = orig_extra_info.copy()\n",
-    "            extra_info[\"need_tools_kwargs\"] = True\n",
-    "            extra_info[\"tools_kwargs\"] = {\n",
-    "                \"code_interpreter\": {\n",
-    "                    \"create_kwargs\": {\n",
-    "                        \"ground_truth\": example[\"reward_model\"][\"ground_truth\"],\n",
-    "                    },\n",
-    "                },\n",
-    "            }\n",
-    "            example[\"extra_info\"] = extra_info\n",
-    "            return example\n",
-    "\n",
-    "        return process_fn\n",
-    "\n",
-    "    train_dataset = train_dataset.map(function=make_map_fn(\"train\"), with_indices=True).remove_columns(\"__index_level_0__\")\n",
-    "    train_dataset = datasets.concatenate_datasets([train_dataset, train_dataset]).shuffle(seed=7)"
+    "system_prompt = '''Solve the following math problem step by step. The last line of your response should be of the form Answer: $Answer (without quotes) where $Answer is the answer to the problem.\\n\\n'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "d97dcaa0-75ff-49c6-91a6-bf1113067383",
+   "execution_count": 16,
+   "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "{'ground_truth': '80', 'style': 'rule-lighteval/MATH_v2'}\n"
+      "Map: 100%|██████████| 30/30 [00:00<00:00, 2493.15 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "print(train_dataset)"
+    "    train_dataset = dataset[\"train\"]\n",
+    "    def make_map_fn(split):\n",
+    "        def process_fn(example, idx):\n",
+    "            extra_info = {'index':example['id']}\n",
+    "            extra_info[\"need_tools_kwargs\"] = True\n",
+    "            extra_info[\"tools_kwargs\"] = {\n",
+    "                \"code_interpreter\": {\n",
+    "                    \"create_kwargs\": {\n",
+    "                        \"ground_truth\": example[\"answer\"],\n",
+    "                    },\n",
+    "                },\n",
+    "            }\n",
+    "            extra_info['split'] = None\n",
+    "            extra_info['raw_problem'] = example['problem']\n",
+    "            example[\"extra_info\"] = extra_info\n",
+    "            example['data_source'] = 'math_dapo'\n",
+    "            example['ability'] = 'MATH'\n",
+    "            example['reward_model'] = {\n",
+    "                'ground_truth': example[\"answer\"],\n",
+    "                'style': 'rule-lighteval/MATH_v2'\n",
+    "            }\n",
+    "            example['prompt'] = [{\n",
+    "                'content' : f'{system_prompt}{example['problem']}\\n\\nRemember to put your answer on its own line after \"Answer:\".',\n",
+    "                'role' : 'user'\n",
+    "            }]\n",
+    "            return example\n",
+    "        return process_fn\n",
+    "\n",
+    "    train_dataset = train_dataset.map(function=make_map_fn(\"train\"), with_indices=True).remove_columns(\"__index_level_0__\")\n",
+    "    train_dataset = datasets.concatenate_datasets([train_dataset]*64).shuffle(seed=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "2252bce0-53c6-46e2-9203-ac67f3750d05",
    "metadata": {},
    "outputs": [
@@ -98,24 +92,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 11.09ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00,  6.94ba/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1860608"
+       "3485760"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    local_dir = '/data/kcl/lpy/data/AIME_2024/'\n",
     "    import os\n",
-    "    train_dataset.to_parquet(os.path.join(local_dir, \"test_verl.parquet\"))"
+    "    train_dataset.to_parquet(os.path.join(data_path, \"test_verl.parquet\"))"
    ]
   },
   {
