add val set aime

--- a/OpenThoughts_process.ipynb
+++ b/OpenThoughts_process.ipynb
@@ -23,22 +23,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "97c639d0-7d96-4c16-b766-f8cc21f7fc6d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating train split: 100%|██████████| 113957/113957 [00:12<00:00, 9465.64 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_path = '/data/kcl/lpy/data/OpenThoughts'\n",
     "cache_path = '/data/kcl/lpy/hf'\n",
     "dataset = datasets.load_dataset(data_path, \"metadata\", cache_dir=cache_path, split=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "285bfe4b-d1f5-4ac0-ad0c-1774c1987372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = dataset.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ff8dcd38-5d9c-475a-ac93-c5a0f8a77808",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "numina_math          89120\n",
+       "taco                  6983\n",
+       "code_contests         6510\n",
+       "apps                  4794\n",
+       "codeforces            1617\n",
+       "camelai_biology       1246\n",
+       "camelai_physics       1246\n",
+       "camelai_chemistry     1222\n",
+       "riddle_sense          1219\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp['source'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a3ee795d-d42d-4e1d-a373-d770bccac549",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem</th>\n",
+       "      <th>deepseek_reasoning</th>\n",
+       "      <th>deepseek_solution</th>\n",
+       "      <th>ground_truth_solution</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>source</th>\n",
+       "      <th>test_cases</th>\n",
+       "      <th>starter_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Let \\( a, b, c \\) be positive real numbers. Pr...</td>\n",
+       "      <td>Okay, so I need to prove this inequality: \\(\\f...</td>\n",
+       "      <td>To prove the inequality \\n\\n\\[\\n\\frac{1}{a(1+b...</td>\n",
+       "      <td>1. Consider the given inequality:\\n\\n\\[\\n\\frac...</td>\n",
+       "      <td>math</td>\n",
+       "      <td>numina_math</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Given real numbers \\( a, b, c \\) and a positiv...</td>\n",
+       "      <td>Okay, let's try to tackle this problem step by...</td>\n",
+       "      <td>Given real numbers \\(a, b, c\\) and a positive ...</td>\n",
+       "      <td>\\nWe begin by analyzing the function \\( f(x) =...</td>\n",
+       "      <td>math</td>\n",
+       "      <td>numina_math</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>In triangle $ABC$, $CA = CB$, and $D$ is the m...</td>\n",
+       "      <td>Okay, so I have this geometry problem here. Le...</td>\n",
+       "      <td>In triangle \\(ABC\\), \\(CA = CB\\), making it is...</td>\n",
+       "      <td>1. **Identify Key Elements**: Consider \\( \\tri...</td>\n",
+       "      <td>math</td>\n",
+       "      <td>numina_math</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Let \\( p = 2^{3009}, q = 3^{2006}, \\) and \\( r...</td>\n",
+       "      <td>Okay, so I need to figure out which of the giv...</td>\n",
+       "      <td>To determine which of the given statements is ...</td>\n",
+       "      <td>Given the values:\\n\\[ p = 2^{3009}, \\quad q = ...</td>\n",
+       "      <td>math</td>\n",
+       "      <td>numina_math</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>When \\( a &lt; -1 \\), the nature of the roots for...</td>\n",
+       "      <td>Okay, so I need to figure out the nature of th...</td>\n",
+       "      <td>To determine the nature of the roots for the q...</td>\n",
+       "      <td>\\nGiven the quadratic equation:\\n\\n\\[\\n(a^3 + ...</td>\n",
+       "      <td>math</td>\n",
+       "      <td>numina_math</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             problem  \\\n",
+       "0  Let \\( a, b, c \\) be positive real numbers. Pr...   \n",
+       "1  Given real numbers \\( a, b, c \\) and a positiv...   \n",
+       "2  In triangle $ABC$, $CA = CB$, and $D$ is the m...   \n",
+       "3  Let \\( p = 2^{3009}, q = 3^{2006}, \\) and \\( r...   \n",
+       "4  When \\( a < -1 \\), the nature of the roots for...   \n",
+       "\n",
+       "                                  deepseek_reasoning  \\\n",
+       "0  Okay, so I need to prove this inequality: \\(\\f...   \n",
+       "1  Okay, let's try to tackle this problem step by...   \n",
+       "2  Okay, so I have this geometry problem here. Le...   \n",
+       "3  Okay, so I need to figure out which of the giv...   \n",
+       "4  Okay, so I need to figure out the nature of th...   \n",
+       "\n",
+       "                                   deepseek_solution  \\\n",
+       "0  To prove the inequality \\n\\n\\[\\n\\frac{1}{a(1+b...   \n",
+       "1  Given real numbers \\(a, b, c\\) and a positive ...   \n",
+       "2  In triangle \\(ABC\\), \\(CA = CB\\), making it is...   \n",
+       "3  To determine which of the given statements is ...   \n",
+       "4  To determine the nature of the roots for the q...   \n",
+       "\n",
+       "                               ground_truth_solution domain       source  \\\n",
+       "0  1. Consider the given inequality:\\n\\n\\[\\n\\frac...   math  numina_math   \n",
+       "1  \\nWe begin by analyzing the function \\( f(x) =...   math  numina_math   \n",
+       "2  1. **Identify Key Elements**: Consider \\( \\tri...   math  numina_math   \n",
+       "3  Given the values:\\n\\[ p = 2^{3009}, \\quad q = ...   math  numina_math   \n",
+       "4  \\nGiven the quadratic equation:\\n\\n\\[\\n(a^3 + ...   math  numina_math   \n",
+       "\n",
+       "  test_cases starter_code  \n",
+       "0        NaN          NaN  \n",
+       "1        NaN          NaN  \n",
+       "2        NaN          NaN  \n",
+       "3        NaN          NaN  \n",
+       "4        NaN          NaN  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cea72bf-a484-4307-8c4c-138f0fdd96f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b58125b2-8150-42cf-b95f-a3dfd196391a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "489c9154-2ee6-46c4-aaa6-c31f8254e5d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let \\( a, b, c \\) be positive real numbers. Prove that\n",
+      "\n",
+      "$$\n",
+      "\\frac{1}{a(1+b)}+\\frac{1}{b(1+c)}+\\frac{1}{c(1+a)} \\geq \\frac{3}{1+abc},\n",
+      "$$\n",
+      "\n",
+      "and that equality occurs if and only if \\( a = b = c = 1 \\).\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset['problem'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "9bbb47cc-4e61-457e-bf10-003fd566b621",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given real numbers \\(a, b, c\\) and a positive number \\(\\lambda\\) such that the polynomial \\(f(x) = x^3 + ax^2 + bx + c\\) has three real roots \\(x_1, x_2, x_3\\) with the conditions \\(x_2 - x_1 = \\lambda\\) and \\(x_3 > \\frac{1}{2}(x_1 + x_2)\\), we need to find the maximum value of \\(\\frac{2a^3 + 27c - 9ab}{\\lambda^3}\\).\n",
+      "\n",
+      "Using Vieta's formulas for the polynomial \\(f(x)\\):\n",
+      "1. \\(x_1 + x_2 + x_3 = -a\\)\n",
+      "2. \\(x_1x_2 + x_1x_3 + x_2x_3 = b\\)\n",
+      "3. \\(x_1x_2x_3 = -c\\)\n",
+      "\n",
+      "We parametrize the roots as follows:\n",
+      "- \\(x_1 = t - \\frac{\\lambda}{2}\\)\n",
+      "- \\(x_2 = t + \\frac{\\lambda}{2}\\)\n",
+      "- \\(x_3 = t + s\\) where \\(s > 0\\)\n",
+      "\n",
+      "Substituting these into Vieta's formulas, we get:\n",
+      "- \\(S = x_1 + x_2 + x_3 = 3t + s\\)\n",
+      "- \\(P = x_1x_2 + x_1x_3 + x_2x_3 = 3t^2 + 2ts - \\frac{\\lambda^2}{4}\\)\n",
+      "- \\(Q = x_1x_2x_3 = (t^2 - \\frac{\\lambda^2}{4})(t + s)\\)\n",
+      "\n",
+      "Substituting \\(a = -S\\), \\(b = P\\), and \\(c = -Q\\) into the expression \\(2a^3 + 27c - 9ab\\), we simplify it to:\n",
+      "\\[\n",
+      "-2s^3 + \\frac{9}{2}\\lambda^2 s\n",
+      "\\]\n",
+      "\n",
+      "Introducing \\(k = \\frac{s}{\\lambda}\\), the expression becomes:\n",
+      "\\[\n",
+      "\\frac{-2s^3 + \\frac{9}{2}\\lambda^2 s}{\\lambda^3} = -2k^3 + \\frac{9}{2}k\n",
+      "\\]\n",
+      "\n",
+      "To maximize \\(-2k^3 + \\frac{9}{2}k\\), we take the derivative and set it to zero:\n",
+      "\\[\n",
+      "g'(k) = -6k^2 + \\frac{9}{2} = 0 \\implies k^2 = \\frac{3}{4} \\implies k = \\frac{\\sqrt{3}}{2}\n",
+      "\\]\n",
+      "\n",
+      "Checking the second derivative confirms a maximum. Substituting \\(k = \\frac{\\sqrt{3}}{2}\\) back into the expression gives:\n",
+      "\\[\n",
+      "-2\\left(\\frac{\\sqrt{3}}{2}\\right)^3 + \\frac{9}{2}\\left(\\frac{\\sqrt{3}}{2}\\right) = \\frac{3\\sqrt{3}}{2}\n",
+      "\\]\n",
+      "\n",
+      "Thus, the maximum value of \\(\\frac{2a^3 + 27c - 9ab}{\\lambda^3}\\) is \\(\\boxed{\\dfrac{3\\sqrt{3}}{2}}\\).\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset['ground_truth_solution'][1])"
    ]
   },
   {
