--- a/aime2024_process.ipynb
+++ b/aime2024_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "id": "b0606578-e405-4197-8c2d-72559d2983fb",
    "metadata": {},
    "outputs": [],
@@ -15,38 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "e58b3076-f8d2-4604-8c50-332ce6931f7a",
+   "execution_count": 72,
+   "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    test: Dataset({\n",
-       "        features: ['data_source', 'prompt', 'ability', 'reward_model', 'extra_info', '__index_level_0__'],\n",
-       "        num_rows: 960\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 960/960 [00:00<00:00, 10316.35 examples/s]\n"
+     ]
     }
    ],
    "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    train_dataset = dataset[\"test\"]\n",
+    "    train_dataset = dataset[\"train\"]\n",
     "\n",
     "    # add a row to each data item that represents a unique id\n",
     "    def make_map_fn(split):\n",
@@ -62,6 +44,7 @@
     "                },\n",
     "            }\n",
     "            example[\"extra_info\"] = extra_info\n",
+    "            example['data_source'] = 'aime_2024'\n",
     "            return example\n",
     "\n",
     "        return process_fn\n",
@@ -72,25 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "d97dcaa0-75ff-49c6-91a6-bf1113067383",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ground_truth': '80', 'style': 'rule-lighteval/MATH_v2'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "2252bce0-53c6-46e2-9203-ac67f3750d05",
    "metadata": {},
    "outputs": [
@@ -98,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 11.09ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 11.38ba/s]\n"
      ]
     },
     {
@@ -107,7 +72,7 @@
        "1860608"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
