--- a/aime2025_process.ipynb
+++ b/aime2025_process.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "b0606578-e405-4197-8c2d-72559d2983fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/torch/cuda/__init__.py:61: FutureWarning: The pynvml package is deprecated. Please install nvidia-ml-py instead. If you did not install pynvml directly, please report this to the maintainers of the package that installed pynvml for you.\n",
-      "  import pynvml  # type: ignore[import]\n",
-      "Generating train split: 100%|██████████| 30/30 [00:00<00:00, 4512.43 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datasets\n",
     "cache_path = '/data/kcl/lpy/hf'\n",
@@ -27,7 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "id": "b3d86307-72f6-46fe-b075-f8b073b52338",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'problem', 'answer', 'solution', 'url', 'year', '__index_level_0__'],\n",
+       "        num_rows: 30\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "e58b3076-f8d2-4604-8c50-332ce6931f7a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
    "metadata": {},
    "outputs": [
@@ -45,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 30/30 [00:00<00:00, 2493.15 examples/s]\n"
+      "Map: 100%|██████████| 30/30 [00:00<00:00, 2352.12 examples/s]\n"
      ]
     }
    ],
@@ -65,7 +79,7 @@
     "            extra_info['split'] = None\n",
     "            extra_info['raw_problem'] = example['problem']\n",
     "            example[\"extra_info\"] = extra_info\n",
-    "            example['data_source'] = 'math_dapo'\n",
+    "            example['data_source'] = 'aime_2025'\n",
     "            example['ability'] = 'MATH'\n",
     "            example['reward_model'] = {\n",
     "                'ground_truth': example[\"answer\"],\n",
@@ -84,7 +98,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
+   "id": "ec3bf89c-3e66-4dae-8100-28a3c8d5e049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 1,\n",
+       " 'problem': 'On $\\\\triangle ABC$ points $A,D,E$, and $B$ lie that order on side $\\\\overline{AB}$ with $AD=4, DE=16$, and $EB=8$. Points $A,F,G$, and $C$ lie in that order on side $\\\\overline{AC}$ with $AF=13, FG=52$, and $GC=26$. Let $M$ be the reflection of $D$ through $F$, and let $N$ be the reflection of $G$ through $E$. Quadrilateral $DEGF$ has area 288. Find the area of heptagon $AFNBCEM$.',\n",
+       " 'answer': '588',\n",
+       " 'solution': '588',\n",
+       " 'url': 'https://artofproblemsolving.com/wiki/index.php/2025_AIME_I_Problems/Problem_2',\n",
+       " 'year': 2025,\n",
+       " 'extra_info': {'index': 1,\n",
+       "  'need_tools_kwargs': True,\n",
+       "  'raw_problem': 'On $\\\\triangle ABC$ points $A,D,E$, and $B$ lie that order on side $\\\\overline{AB}$ with $AD=4, DE=16$, and $EB=8$. Points $A,F,G$, and $C$ lie in that order on side $\\\\overline{AC}$ with $AF=13, FG=52$, and $GC=26$. Let $M$ be the reflection of $D$ through $F$, and let $N$ be the reflection of $G$ through $E$. Quadrilateral $DEGF$ has area 288. Find the area of heptagon $AFNBCEM$.',\n",
+       "  'split': None,\n",
+       "  'tools_kwargs': {'code_interpreter': {'create_kwargs': {'ground_truth': '588'}}}},\n",
+       " 'data_source': 'aime_2025',\n",
+       " 'ability': 'MATH',\n",
+       " 'reward_model': {'ground_truth': '588', 'style': 'rule-lighteval/MATH_v2'},\n",
+       " 'prompt': [{'content': 'Solve the following math problem step by step. The last line of your response should be of the form Answer: $Answer (without quotes) where $Answer is the answer to the problem.\\n\\nOn $\\\\triangle ABC$ points $A,D,E$, and $B$ lie that order on side $\\\\overline{AB}$ with $AD=4, DE=16$, and $EB=8$. Points $A,F,G$, and $C$ lie in that order on side $\\\\overline{AC}$ with $AF=13, FG=52$, and $GC=26$. Let $M$ be the reflection of $D$ through $F$, and let $N$ be the reflection of $G$ through $E$. Quadrilateral $DEGF$ has area 288. Find the area of heptagon $AFNBCEM$.\\n\\nRemember to put your answer on its own line after \"Answer:\".',\n",
+       "   'role': 'user'}]}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "2252bce0-53c6-46e2-9203-ac67f3750d05",
    "metadata": {},
    "outputs": [
@@ -92,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00,  6.94ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00,  7.05ba/s]\n"
      ]
     },
     {
@@ -101,7 +151,7 @@
        "3485760"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
