--- a/hmmtfeb2025_process.ipynb
+++ b/hmmtfeb2025_process.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b0606578-e405-4197-8c2d-72559d2983fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/data/kcl/lpy/anaconda3/envs/verl_new/lib/python3.12/site-packages/torch/cuda/__init__.py:61: FutureWarning: The pynvml package is deprecated. Please install nvidia-ml-py instead. If you did not install pynvml directly, please report this to the maintainers of the package that installed pynvml for you.\n",
-      "  import pynvml  # type: ignore[import]\n",
-      "Generating train split: 100%|██████████| 30/30 [00:00<00:00, 6748.68 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datasets\n",
     "cache_path = '/data/kcl/lpy/hf'\n",
@@ -27,7 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "id": "507d0270-3dd4-470c-bb05-28621e225978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['problem_idx', 'problem', 'answer', 'problem_type'],\n",
+       "        num_rows: 30\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e58b3076-f8d2-4604-8c50-332ce6931f7a",
    "metadata": {},
    "outputs": [],
@@ -37,10 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "cdb4ea3f-57a5-439b-818c-13d20dddbc96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 30/30 [00:00<00:00, 2891.09 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "    train_dataset = dataset[\"train\"]\n",
     "    def make_map_fn(split):\n",
@@ -57,7 +79,7 @@
     "            extra_info['split'] = None\n",
     "            extra_info['raw_problem'] = example['problem']\n",
     "            example[\"extra_info\"] = extra_info\n",
-    "            example['data_source'] = 'math_dapo'\n",
+    "            example['data_source'] = 'aime_hmmt_feb_2025'\n",
     "            example['ability'] = 'MATH'\n",
     "            example['reward_model'] = {\n",
     "                'ground_truth': example[\"answer\"],\n",
@@ -76,41 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5fe09120-9b27-4e82-afd1-bf58b7130bb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'problem_idx': 2,\n",
-       " 'problem': \"Mark writes the expression $\\\\sqrt{\\\\underline{a b c d}}$ on the board, where $\\\\underline{a b c d}$ is a four-digit number and $a \\\\neq 0$. Derek, a toddler, decides to move the $a$, changing Mark's expression to $a \\\\sqrt{\\\\underline{b c d}}$. Surprisingly, these two expressions are equal. Compute the only possible four-digit number $\\\\underline{a b c d}$.\",\n",
-       " 'answer': '3375',\n",
-       " 'problem_type': ['Number Theory'],\n",
-       " 'extra_info': {'index': 2,\n",
-       "  'need_tools_kwargs': True,\n",
-       "  'raw_problem': \"Mark writes the expression $\\\\sqrt{\\\\underline{a b c d}}$ on the board, where $\\\\underline{a b c d}$ is a four-digit number and $a \\\\neq 0$. Derek, a toddler, decides to move the $a$, changing Mark's expression to $a \\\\sqrt{\\\\underline{b c d}}$. Surprisingly, these two expressions are equal. Compute the only possible four-digit number $\\\\underline{a b c d}$.\",\n",
-       "  'split': None,\n",
-       "  'tools_kwargs': {'code_interpreter': {'create_kwargs': {'ground_truth': '3375'}}}},\n",
-       " 'data_source': 'math_dapo',\n",
-       " 'ability': 'MATH',\n",
-       " 'reward_model': {'ground_truth': '3375', 'style': 'rule-lighteval/MATH_v2'},\n",
-       " 'prompt': [{'content': 'Solve the following math problem step by step. The last line of your response should be of the form Answer: $Answer (without quotes) where $Answer is the answer to the problem.\\n\\nMark writes the expression $\\\\sqrt{\\\\underline{a b c d}}$ on the board, where $\\\\underline{a b c d}$ is a four-digit number and $a \\\\neq 0$. Derek, a toddler, decides to move the $a$, changing Mark\\'s expression to $a \\\\sqrt{\\\\underline{b c d}}$. Surprisingly, these two expressions are equal. Compute the only possible four-digit number $\\\\underline{a b c d}$.\\n\\nRemember to put your answer on its own line after \"Answer:\".',\n",
-       "   'role': 'user'}]}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "2252bce0-53c6-46e2-9203-ac67f3750d05",
    "metadata": {},
    "outputs": [
@@ -118,16 +106,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00,  7.87ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00,  8.00ba/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2639808"
+       "2657088"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
