--- a/on_policy_distill_问题.ipynb
+++ b/on_policy_distill_问题.ipynb
@@ -6652,7 +6652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "id": "9e1b80e2-518d-452b-bf20-4f791f6d581c",
    "metadata": {
     "scrolled": true
@@ -6662,186 +6662,274 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "好的，我将 `init_workers` 重构为支持两种模式：\n",
-      "1.  **单机模式 (`n_nodes=1`)**：逻辑更简单，直接在本地分配资源。\n",
-      "2.  **多机模式 (`n_nodes>1`)**：包含严格的跨节点 Batch Size 检查和拓扑计算。\n",
+      "8 机 8 卡是一个非常庞大的集群（64 张 GPU）。这意味着你的**算力极强**，但**通信和 Batch Size 的约束**也变得非常严格。\n",
       "\n",
-      "同时，为了保证训练效率，**即使在单机模式下，我依然保留了 \"Student多/Teacher少\" (如 7:1) 的高效分配策略**，而不是回退到低效的 4:4。\n",
+      "### 1. 架构计算 (Topology)\n",
       "\n",
-      "请替换 `teacher_student_reflective_trainer.py` 中的 `init_workers` 方法：\n",
+      "*   **节点数 (Nodes)**: 8\n",
+      "*   **单节点卡数 (GPUs/Node)**: 8\n",
+      "*   **分配策略 (7:1)**:\n",
+      "    *   **Student**: 每节点 7 卡 $\\times$ 8 节点 = **56 张卡 (Global World Size)**。\n",
+      "    *   **Teacher**: 每节点 1 卡 $\\times$ 8 节点 = **8 张卡**。\n",
       "\n",
-      "```python\n",
-      "    def init_workers(self):\n",
-      "        \"\"\"\n",
-      "        初始化 Workers，区分单机模式和多机模式。\n",
-      "        \"\"\"\n",
-      "        n_gpus_per_node = self.config.trainer.n_gpus_per_node\n",
-      "        n_nodes = self.config.trainer.nnodes\n",
+      "### 2. Batch Size 计算 (关键约束)\n",
       "\n",
-      "        print(f\"\\n{'='*20} Worker Initialization (Nodes={n_nodes}) {'='*20}\")\n",
+      "你需要满足以下整除关系：\n",
+      "`ppo_mini_batch_size` % `Student_World_Size` == 0\n",
+      "`Local_Batch` % `Micro_Batch` == 0\n",
       "\n",
-      "        # === 1. 确定单节点内的资源分配 (通用策略: Teacher 只要 1 张卡即可) ===\n",
-      "        if n_gpus_per_node >= 8:\n",
-      "            teacher_gpus = 1  # 8卡机器: 7 Student : 1 Teacher\n",
-      "        elif n_gpus_per_node >= 4:\n",
-      "            teacher_gpus = 1  # 4卡机器: 3 Student : 1 Teacher\n",
-      "        else:\n",
-      "            teacher_gpus = n_gpus_per_node // 2 # 少于4卡则对半\n",
+      "*   **Student World Size**: 56\n",
+      "*   **Micro Batch**: 建议设为 1 或 2 (因为 8k 长文本显存压力大)。\n",
       "\n",
-      "        student_gpus = n_gpus_per_node - teacher_gpus\n",
-      "        \n",
-      "        if student_gpus < 1:\n",
-      "            raise ValueError(f\"Not enough GPUs! Need at least 2 GPUs per node.\")\n",
+      "**推荐配置：**\n",
       "\n",
-      "        # === 2. 模式分支 ===\n",
-      "        if n_nodes > 1:\n",
-      "            # ---------------- [多机模式 Multi-Node] ----------------\n",
-      "            print(f\">>> Mode: Multi-Node Cluster ({n_nodes} nodes)\")\n",
-      "            \n",
-      "            student_world_size = student_gpus * n_nodes\n",
-      "            teacher_world_size = teacher_gpus * n_nodes\n",
-      "            \n",
-      "            print(f\">>> Topology: Student={student_world_size} total GPUs, Teacher={teacher_world_size} total GPUs\")\n",
+      "1.  **`ppo_mini_batch_size`**:\n",
+      "    *   必须是 56 的倍数。\n",
+      "    *   最小可行值：**56** (每卡分到 1 条数据)。\n",
+      "    *   推荐值：**112** (每卡分到 2 条)。\n",
       "\n",
-      "            # 严格检查 Batch Size (多机最容易挂在这里)\n",
-      "            mini_batch = self.config.actor_rollout_ref.actor.ppo_mini_batch_size\n",
-      "            micro_batch = self.config.actor_rollout_ref.actor.ppo_micro_batch_size_per_gpu\n",
-      "            \n",
-      "            if mini_batch % student_world_size != 0:\n",
-      "                suggested = (mini_batch // student_world_size + 1) * student_world_size\n",
-      "                raise ValueError(\n",
-      "                    f\"\\n[Multi-Node Config Error] ppo_mini_batch_size ({mini_batch}) cannot be divided by Student World Size ({student_world_size}).\\n\"\n",
-      "                    f\"Suggested ppo_mini_batch_size: {suggested}\"\n",
-      "                )\n",
-      "            \n",
-      "            # 资源池: 每个节点分配 [N, N, ...]\n",
-      "            student_pool_config = [student_gpus] * n_nodes\n",
-      "            teacher_pool_config = [teacher_gpus] * n_nodes\n",
+      "2.  **`train_batch_size`**:\n",
+      "    *   必须是 `ppo_mini_batch_size` 的倍数。\n",
+      "    *   如果 mini=56，train 可以是 56, 112, 224...\n",
+      "    *   如果 mini=112，train 可以是 112, 224...\n",
+      "    *   **建议设大一点**，充分利用 64 卡的并行能力。比如 **448** 或 **896**。\n",
       "\n",
-      "        else:\n",
-      "            # ---------------- [单机模式 Single-Node] ----------------\n",
-      "            print(f\">>> Mode: Single-Node Local\")\n",
-      "            print(f\">>> Topology: Student={student_gpus} GPUs, Teacher={teacher_gpus} GPUs\")\n",
-      "            \n",
-      "            # 简单检查 Batch Size\n",
-      "            mini_batch = self.config.actor_rollout_ref.actor.ppo_mini_batch_size\n",
-      "            if mini_batch % student_gpus != 0:\n",
-      "                print(f\"!!! WARNING: ppo_mini_batch_size ({mini_batch}) is not divisible by Student GPUs ({student_gpus}). This might cause uneven data drop.\")\n",
+      "### 3. 启动参数推荐\n",
       "\n",
-      "            # 资源池: 单节点列表\n",
-      "            student_pool_config = [student_gpus]\n",
-      "            teacher_pool_config = [teacher_gpus]\n",
+      "请使用以下参数覆盖启动脚本：\n",
       "\n",
-      "        # === 3. 创建资源池 (通用) ===\n",
-      "        student_pool = RayResourcePool(\n",
-      "            process_on_nodes=student_pool_config,\n",
-      "            use_gpu=True,\n",
-      "            max_colocate_count=1,\n",
-      "            name_prefix=\"student_pool\"\n",
-      "        )\n",
-      "        \n",
-      "        teacher_pool = RayResourcePool(\n",
-      "            process_on_nodes=teacher_pool_config,\n",
-      "            use_gpu=True,\n",
-      "            max_colocate_count=1,\n",
-      "            name_prefix=\"teacher_pool\"\n",
-      "        )\n",
-      "        \n",
-      "        self.resource_pool_to_cls = {student_pool: {}, teacher_pool: {}}\n",
+      "```bash\n",
+      "# === 基础环境 ===\n",
+      "export N_NODES=8\n",
+      "export n_gpus_per_node=8\n",
       "\n",
-      "        # === 4. 初始化 Config (通用) ===\n",
-      "        # Student Config\n",
-      "        student_config = deepcopy(self.config.actor_rollout_ref)\n",
-      "        student_cls = RayClassWithInitArgs(\n",
-      "            cls=self.role_worker_mapping[Role.ActorRollout],\n",
-      "            config=student_config,\n",
-      "            role=\"actor_rollout\",\n",
-      "            profile_option=self.config.trainer.npu_profile.options,\n",
-      "        )\n",
-      "        self.resource_pool_to_cls[student_pool][\"actor_rollout\"] = student_cls\n",
+      "# === Batch Size 配置 (核心) ===\n",
+      "# 56 张 Student 卡并行\n",
+      "# 每张卡处理 2 条数据 (Local Batch=2) -> Global Mini Batch = 112\n",
+      "# 每次 Update 跑 4 个 Mini Batch -> Train Batch = 448\n",
+      "data.train_batch_size=448 \\\n",
+      "actor_rollout_ref.actor.ppo_mini_batch_size=112 \\\n",
+      "actor_rollout_ref.actor.ppo_micro_batch_size_per_gpu=2 \\\n",
       "\n",
-      "        # Teacher Config\n",
-      "        teacher_config = deepcopy(self.config.actor_rollout_ref)\n",
-      "        # 显存优化: Teacher 显存占用降低 (根据之前的调试经验)\n",
-      "        teacher_config.rollout.gpu_memory_utilization = 0.5 \n",
-      "        \n",
-      "        teacher_cls = RayClassWithInitArgs(\n",
-      "            cls=self.role_worker_mapping[Role.RefPolicy],\n",
-      "            config=teacher_config,\n",
-      "            role=\"actor_rollout\", # Hack role to enable vLLM\n",
-      "            profile_option=self.config.trainer.npu_profile.options,\n",
-      "        )\n",
-      "        self.resource_pool_to_cls[teacher_pool][\"ref\"] = teacher_cls\n",
+      "# === 显存与性能优化 ===\n",
+      "# 8k 长文本必备\n",
+      "actor_rollout_ref.model.torch_dtype=bfloat16 \\\n",
+      "actor_rollout_ref.actor.entropy_from_logits_with_chunking=True \\\n",
       "\n",
-      "        # === 5. 启动 Workers (通用) ===\n",
-      "        all_wg = {}\n",
-      "        wg_kwargs = {\n",
-      "            \"ray_wait_register_center_timeout\": self.config.trainer.ray_wait_register_center_timeout,\n",
-      "            \"device_name\": self.device_name\n",
-      "        }\n",
-      "        \n",
-      "        for resource_pool, class_dict in self.resource_pool_to_cls.items():\n",
-      "            worker_dict_cls = create_colocated_worker_cls(class_dict=class_dict)\n",
-      "            wg_dict = self.ray_worker_group_cls(\n",
-      "                resource_pool=resource_pool,\n",
-      "                ray_cls_with_init=worker_dict_cls,\n",
-      "                **wg_kwargs,\n",
-      "            )\n",
-      "            spawn_wg = wg_dict.spawn(prefix_set=class_dict.keys())\n",
-      "            all_wg.update(spawn_wg)\n",
+      "# Teacher 提速 (现在有 8 张 Teacher 卡了，压力分散了，Micro Batch 可以小点)\n",
+      "actor_rollout_ref.ref.log_prob_micro_batch_size_per_gpu=4 \\\n",
       "\n",
-      "        self.actor_rollout_wg = all_wg[\"actor_rollout\"]\n",
-      "        self.actor_rollout_wg.init_model()\n",
-      "        \n",
-      "        self.ref_policy_wg = all_wg[\"ref\"]\n",
-      "        self.ref_policy_wg.init_model()\n",
-      "            \n",
-      "        self.async_rollout_mode = False\n",
-      "        if self.config.actor_rollout_ref.rollout.mode == 'async':\n",
-      "            from verl.experimental.agent_loop import AgentLoopManager\n",
-      "            self.async_rollout_mode = True\n",
-      "            self.async_rollout_manager = AgentLoopManager(\n",
-      "                config=self.config,\n",
-      "                worker_group=self.actor_rollout_wg\n",
-      "            )\n",
-      "        \n",
-      "        print(f\"{'='*60}\\n\")\n",
+      "# vLLM 配置 (防止 OOM)\n",
+      "actor_rollout_ref.rollout.gpu_memory_utilization=0.5 \\\n",
+      "actor_rollout_ref.rollout.max_num_batched_tokens=45000 \\\n",
       "```\n",
       "\n",
-      "### 代码说明\n",
-      "1.  **资源分配策略**：无论单机还是多机，默认都采用 **Student 占大头 (如 7卡)**，Teacher 占小头 (如 1卡) 的策略。这是性能最优解。\n",
-      "2.  **多机逻辑 (`if n_nodes > 1`)**：\n",
-      "    *   计算全局 World Size。\n",
-      "    *   **强制检查** `mini_batch` 是否能被 `student_world_size` 整除。如果不整除，直接报错并给出建议值，防止 Ray 启动后报错。\n",
-      "    *   资源池配置为 `[N, N, ...]` 格式。\n",
-      "3.  **单机逻辑 (`else`)**：\n",
-      "    *   只计算本地 GPU。\n",
-      "    *   只做简单的 Warning 提示，不强制报错（方便调试）。\n",
-      "    *   资源池配置为 `[N]` 格式。\n",
-      "4.  **Teacher 显存优化**：保留了 `gpu_memory_utilization=0.5` 的设置，这对长文本训练至关重要。\n"
+      "### 4. 为什么这么配？\n",
+      "\n",
+      "*   **并行度爆炸**：56 张 Student 卡同时 Rollout。一次生成 448 条数据，每张卡只需要生成 $448/56 = 8$ 条。速度会飞快。\n",
+      "*   **Teacher 也不弱**：8 张 Teacher 卡同时计算 Reward。每张卡处理 $448/8 = 56$ 条数据。压力适中。\n",
+      "*   **显存安全**：Micro Batch = 2，配合 Chunking，即使是 8k 长度也能稳稳跑在 4B 模型上。\n",
+      "\n",
+      "**总结**：8 机 8 卡下，瓶颈主要在**数据传输**和**同步**。只要 Batch Size 对齐了（56 的倍数），训练速度将是单机的 7-8 倍。\n"
      ]
     }
    ],
    "source": [
     "response = chat('''\n",
-    "你把init_workers代码改成两个模式，单机模式用以前的逻辑，多机多卡用新逻辑\n",
+    "我要8机8卡运行，运行参数怎么设置\n",
     "''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "id": "d550bce5-252d-4416-8d4f-3327815f8bb8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "这是一个非常好的问题。这三个参数（Train, Mini, Micro）就像是**俄罗斯套娃**，一层套一层，共同决定了数据如何在庞大的 GPU 集群中流动。\n",
+      "\n",
+      "在 **8机8卡（共56张 Student 卡）** 的环境下，理解它们至关重要，否则就会出现“卡住”、“报错”或者“显存爆炸”。\n",
+      "\n",
+      "我用一个**“吃自助餐”**的比喻来解释这三个层级：\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 第一层：`data.train_batch_size` (总盘子)\n",
+      "**含义**：**一次 PPO 迭代（Step）中，一共要“生产”并“消费”多少条数据。**\n",
+      "\n",
+      "*   **比喻**：这是厨师（Rollout Workers）一次性端上桌的所有菜的总量。\n",
+      "*   **在你的配置中 (448)**：\n",
+      "    *   意味着 56 张 Student 卡，齐心协力，一共要生成 **448** 个问题+回答。\n",
+      "    *   平均每张卡负责生成：$448 / 56 = 8$ 条。\n",
+      "*   **作用**：决定了训练的**采样多样性**。这个数越大，模型见过的题越丰富，训练越稳定，但生成时间越长。\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 第二层：`actor.ppo_mini_batch_size` (一口的大小)\n",
+      "**含义**：**进行一次参数更新（Gradient Update / Optimizer Step）时，一共使用多少条数据。**\n",
+      "\n",
+      "*   **比喻**：虽然桌上有 448 道菜，但你嘴巴没那么大，不能一口吞下。你决定分几次吃。这一口下去的总量，就是 Mini Batch。\n",
+      "*   **在你的配置中 (112)**：\n",
+      "    *   桌上有 448 条数据。\n",
+      "    *   你每次只取 **112** 条来算梯度、更新模型。\n",
+      "    *   所以，吃完这顿饭（完成一个 Step），你需要更新：$448 / 112 = 4$ 次。\n",
+      "*   **分布式约束 (为什么报错就在这里)**：\n",
+      "    *   这是一个**全局参数**。Verl 会把这 112 条数据**均匀切分**给所有的 Student 卡。\n",
+      "    *   **算术题**：你有 56 张卡。要把 112 条数据平分。\n",
+      "    *   每张卡分到：$112 / 56 = \\mathbf{2}$ 条。\n",
+      "    *   **报错原因**：如果你设置成 64。$64 / 56 = 1.14$ 条。GPU 没法处理 1.14 条数据，所以之前会报错。**它必须能被卡数整除。**\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 第三层：`ppo_micro_batch_size_per_gpu` (细嚼慢咽)\n",
+      "**含义**：**单张 GPU 在显存允许的情况下，一次前向/反向传播实际能处理的数据量。**\n",
+      "\n",
+      "*   **比喻**：每张卡分到了 2 条数据（Local Batch）。但是，这 2 条数据可能太长了（8k长度），如果同时塞进显存计算，显存会爆（OOM）。所以要一条一条嚼。\n",
+      "*   **在你的配置中 (2)**：\n",
+      "    *   每张卡手头有 2 条数据。\n",
+      "    *   你设置 Micro Batch = 2。\n",
+      "    *   GPU 尝试一次性把这 2 条都塞进显存计算。\n",
+      "    *   **梯度累积 (Gradient Accumulation)**：如果 Micro Batch 设为 1，GPU 就会先算第 1 条，把梯度存起来；再算第 2 条，把梯度加进去；最后再通讯更新。\n",
+      "*   **约束**：\n",
+      "    *   每张卡分到的数据量（2条），必须能被 Micro Batch（2）整除。\n",
+      "    *   如果你设置 Micro Batch = 4，但手里只有 2 条数据，GPU 就会报错：“你让我一次算 4 条，但我手里只有 2 条啊！”\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 总结：8机8卡 (56 Student) 的数据流\n",
+      "\n",
+      "假设配置如下：\n",
+      "*   `train_batch_size = 448`\n",
+      "*   `ppo_mini_batch_size = 112`\n",
+      "*   `micro_batch_size = 2`\n",
+      "\n",
+      "**流程如下：**\n",
+      "\n",
+      "1.  **生成阶段 (Rollout)**：\n",
+      "    *   56 张卡同时开工，每张卡生成 8 条数据。\n",
+      "    *   总共生成 448 条。\n",
+      "\n",
+      "2.  **训练阶段 (PPO Update)**：\n",
+      "    *   数据被切分为 4 个 Mini-Batch（每个 112 条）。\n",
+      "    *   **开始第 1 次更新**：\n",
+      "        *   取前 112 条数据。\n",
+      "        *   分发给 56 张卡 $\\rightarrow$ **每张卡拿到 2 条**。\n",
+      "        *   **GPU 计算**：\n",
+      "            *   Micro Batch = 2。\n",
+      "            *   每张卡一次性把这 2 条数据送入计算（Forward/Backward）。\n",
+      "            *   显存占用 = 2 条 8k 数据的量。\n",
+      "        *   **同步**：56 张卡互相通信，平均梯度。\n",
+      "        *   **更新**：修改模型参数。\n",
+      "    *   **重复上述步骤**，直到 4 个 Mini-Batch 全部跑完。\n",
+      "\n",
+      "### 为什么要这么设置？\n",
+      "\n",
+      "1.  **为了不报错**：`mini_batch` 必须是 `56` 的倍数（因为你有 56 张卡）。\n",
+      "2.  **为了不 OOM**：`micro_batch` 必须足够小（比如 1 或 2），因为 8k 长度太吃显存了。\n",
+      "3.  **为了训练快**：`train_batch` 设大一点（448），可以让庞大的集群“跑一次，学久一点”，减少生成（最慢的环节）的频率。\n"
+     ]
+    }
+   ],
    "source": [
-    "del chat_history[-1]"
+    "response = chat('''\n",
+    "我其实不理解这几个参数的具体含义，你帮我解释一下具体在干啥？为啥要这样设置？\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "6b14184e-7e00-4425-b186-fd4cd590e54f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verl 的 Metric 系统是基于 `DataProto` 中的 `data_source` 字段来分组的。如果你的 Metric 混在一起了，说明这些新加的数据集在加载时，**没有正确设置 `data_source` 字段**，或者它们都被默认设为了同一个名字（如 `unknown`）。\n",
+      "\n",
+      "你需要修改数据加载逻辑，确保每个 Parquet 文件的数据被赋予**唯一且有意义的 `data_source` 标签**。\n",
+      "\n",
+      "### 1. 确认数据源 (Parquet 文件)\n",
+      "Verl 默认读取 Parquet 文件中的 `data_source` 列。\n",
+      "*   如果你的 `train_verl.parquet` 里有 `data_source` 列，且值为 `openai/gsm8k`，那么 Metric 就是 `val-core/openai/gsm8k/...`。\n",
+      "*   如果你的 OpenThoughts 数据集里没有这一列，或者所有数据的这一列都是 `default`，那么 Metric 就会混在一起。\n",
+      "\n",
+      "### 2. 解决方案：在加载时注入 Data Source\n",
+      "\n",
+      "我们不需要修改 Parquet 文件，而是修改 `verl/utils/dataset/rl_dataset.py`，让它根据**文件名**或者**配置**来强制覆盖 `data_source`。\n",
+      "\n",
+      "请找到 `RLHFDataset` 类（或你使用的 Dataset 类），修改 `_read_files_and_tokenize` 方法。\n",
+      "\n",
+      "#### 修改 `verl/utils/dataset/rl_dataset.py`\n",
+      "\n",
+      "```python\n",
+      "    def _read_files_and_tokenize(self):\n",
+      "        data_source = self.config.get(\"data_source\", None)\n",
+      "        # ...\n",
+      "        \n",
+      "        for file_path in self.data_files:\n",
+      "            # === FIX: 根据文件名自动推断 data_source ===\n",
+      "            # 例如: /data/.../AIME_2024/test_verl.parquet -> \"AIME_2024\"\n",
+      "            # 或者从 config 中传入一个列表对应每个文件\n",
+      "            \n",
+      "            import os\n",
+      "            # 简单的启发式规则：取文件名的上一级目录名\n",
+      "            auto_source_name = os.path.basename(os.path.dirname(file_path))\n",
+      "            \n",
+      "            # 或者更粗暴：直接用文件名 (test_verl.parquet 可能重复，不推荐)\n",
+      "            # auto_source_name = os.path.basename(file_path).replace(\".parquet\", \"\")\n",
+      "            \n",
+      "            print(f\"Loading {file_path} with data_source='{auto_source_name}'\")\n",
+      "            \n",
+      "            # 读取 Parquet\n",
+      "            df = pd.read_parquet(file_path)\n",
+      "            \n",
+      "            # === FIX: 强制覆盖/添加 data_source 列 ===\n",
+      "            # 如果配置里没有指定全局 data_source，就用文件特定的\n",
+      "            if data_source is None:\n",
+      "                df['data_source'] = auto_source_name\n",
+      "            else:\n",
+      "                df['data_source'] = data_source\n",
+      "                \n",
+      "            # ... (后续的 tokenize 逻辑) ...\n",
+      "```\n",
+      "\n",
+      "### 3. 更优雅的方案：修改启动脚本 (Hydra List)\n",
+      "\n",
+      "如果你不想改代码，且 Verl 支持为每个数据集指定 Config，你可以在启动脚本里把 `data.val_files` 写成带 Key 的字典（但这取决于 Hydra/Verl 的具体实现支持）。\n",
+      "\n",
+      "**最稳妥的办法**还是修改 `rl_dataset.py`，强行把 `data_source` 列刷成你想要的名字。\n",
+      "\n",
+      "**修改后的效果**：\n",
+      "假设你加载了：\n",
+      "1.  `.../AIME_2024/test.parquet` -> `data_source=\"AIME_2024\"`\n",
+      "2.  `.../GSM8K/test.parquet` -> `data_source=\"GSM8K\"`\n",
+      "\n",
+      "你的日志里就会自动出现：\n",
+      "*   `val-core/AIME_2024/acc/mean`\n",
+      "*   `val-core/GSM8K/acc/mean`\n",
+      "\n",
+      "它们会自动分开计算和显示。\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = chat('''\n",
+    "我新加了多个数据集，我希望每个数据集独立一个metric，现在好像混合起来一起计算了，怎么修改？\n",
+    "''')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b14184e-7e00-4425-b186-fd4cd590e54f",
+   "id": "300e582e-873d-4bb7-b849-091330e2dc1d",
    "metadata": {},
    "outputs": [],
    "source": []
